[metadata]
name = lined
version = 0.0.6
url = https://github.com/otosense/lined
packages = 
		lined
include_package_data = True
platforms = any
description_file = README.md
pkg-dir = /D/Dropbox/dev/p3/proj/po/lined
description = Building simple pipelines, simply.
root_url = https://github.com/otosense
author = OtoSense
license = mit
description-file = README.md

