[metadata]
name = lined
version = 0.0.12
url = https://github.com/otosense/lined
platforms = any
description_file = README.md
description = 
		Building simple pipelines
		simply.
root_url = https://github.com/otosense
author = OtoSense
license = mit

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

