[metadata]
name = lined
version = 0.0.21
url = https://github.com/otosense/lined
platforms = any
description_file = README.md
description = Building simple pipelines simply.
root_url = https://github.com/otosense
author = OtoSense
license = apache-2.0
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		streams
		pipelines

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

